src/components/DataTable/styles.css
.dataTableContainer {
    min-width: 350px;
    height: 308px;
    background: radial-gradient(99.31% 94.34% at 49.88% -2.58%, rgba(232, 186, 115, 0.15) 0%, rgba(232, 186, 115, 0) 72.18%), #15171A;
    border-radius: 16px;
}

.dataTableDataWrapper {
    height: 200px;
    overflow-y: auto;
    padding-top: 20px;
}

.dataTableDataWrapper::-webkit-scrollbar {
    display: none;
}

.dataTableRow {
    display: flex;
    align-items: center;
    justify-content: space-around;

    border-bottom-width: 1px;
    border-bottom-style: solid;
    border-bottom-color: #505050;

    margin-left: 40px;
    margin-right: 40px;
}

.dataTableMiddleColumn {
    width: 250%;
    height: 60px;

    display: flex;
    justify-content: center;
    align-items: center;
}

.dataTableRightColumn {
    width: 100%;
    height: 60px;

    border-left-width: 1px;
    border-left-style: solid;
    border-left-color: #505050;

    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.dataTableLeftColumn {
    width: 100%;
    height: 60px;

    border-right-width: 1px;
    border-right-style: solid;
    border-right-color: #505050;

    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.dataTableCenterLoader {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

